# facon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: windows-cross.cmake
docs/: v1.0.md  v1.1.md  v1.2.md  v1.3.md  v1.4.md  v1.5.md  v1.6.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h  timeman.cpp  timeman.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  version.h.in  version.rc  version.rc.in
